# wordle_solver

./: .gitignore  README.md  main.py  pyproject.toml  tools.py  word_crunch.py
ai/: solver.py
tui/: app.py  game.py  loader.py  pattern.py  play.py
