[project]
name = "wordle-solver"
version = "0.1.0"
description = "Wordle Solver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
