[project]
name = "wordle-solver"
version = "0.1.0"
description = "Wordle Solver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "C4", "UP", "SIM", "RUF", "PERF"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"

reportMissingTypeStubs = false
